# ai-engineer-capstone

./: README.md  app_logs.db  env.example  main.py  pyproject.toml
app/: app_logs.db  main.py
app/api/: routes.py
app/core/: budget.py  config.py  costs.py  db.py  guardrails.py  llm_client.py  logging.py  middleware.py  rate_limit.py  tool_client.py  tool_log_repo.py  tool_schemas.py
app/mcp/: math_server.py
app/rag/: build_index.py  chunker.py  indexer.py  loader.py  pdf_loader.py  reranker.py  resume_chunker.py  retriever.py
app/workflows/: qa_graph.py
docs/: oncall.md  product.md
eval/: app_logs.db  e2e_eval.py  rag_eval.py
rag_store/: chunks.json  index.faiss
