[project]
name = "ai-engineer-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.14",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]
